# fastfileparser

./: .gitignore  CMakeLists.txt  README.md  index.cpp
src/io/: csv_scanner.cpp  csv_scanner.h
src/storage/: mmap_manager.cpp  mmap_manager.h
